# django-api-keys

./: LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
django_api_keys/: __init__.py  apps.py  backends.py  crypto.py  decorators.py  middleware.py  models.py  mutli_api_crypto.py  package_settings.py  parser.py  settings.py
django_api_keys/analytics/: apps.py  middleware.py  models.py
django_api_keys/analytics/migrations/: 0001_initial.py
django_api_keys/management/commands/: rotation.py
django_api_keys/migrations/: 0001_initial.py  0002_alter_apikey_options.py
django_api_keys/rotation/: admin.py  apps.py  utils.py
docs/: authentication.rst  getting_started.rst  migrating.rst  rotation.rst  settings.rst
example/: requirements.txt
example/ApiKey/: settings.py  urls.py
example/fruits/: urls.py  views.py
scripts/: makemigrations.py
tests/: conftest.py  test_admin.py  test_analytics.py  test_analytics_middleware.py  test_api_authentication.py  test_api_key_crypto.py  test_api_key_multi_crypto.py  test_models.py  test_permissions.py
tests/fixtures/: api_key.py
