# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-api-keys"
version = "0.0.1"
dynamic = [
  "description",
  "readme",
  "optional-dependencies",
  "dependencies",
  "classifiers",
  "authors",
  "license",
]
